--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -9,6 +9,6 @@ spring.datasource.password: "4788dfe1ccbe6485934aec2ffeddb06163ea3d616df5fd75be9
 spring.datasource.testWhileIdle: "true"
 spring.datasource.validationQuery: "SELECT 1"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
-redis.server: "redis"
+redis.server: "192.178.222.52"
 redis.port: "6379"
 signing.key: "345345fsdfsf5345"
